--- a/index.html
+++ b/index.html
@@ -5,57 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Styles -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="body">
     <!-- Шапка -->
-    <header>
+    <header class="page-header">
       <nav>
-        <a href="./index.html" lang="en">WebStudio</a>
+        <a class="logo" href="./index.html" lang="en"
+          ><span class="text-blue">Web</span>Studio</a
+        >
         <!-- Навігація -->
         <ul>
-          <li><a href="./index.html">Cтудія</a></li>
-          <li><a href="#">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a class="site-nav" href="./index.html">Cтудія</a></li>
+          <li>
+            <a class="site-nav" href="./portfolio.html">Портфоліо</a>
+          </li>
+          <li><a class="site-nav" href="#">Контакти</a></li>
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="auth-nav" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="auth-nav" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <!-- Основний контент -->
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="section-pageone words-in-center">
+        <h1 class="h-one">Ефективні рішення для вашого бізнесу</h1>
+        <button class="button" type="button">Замовити послугу</button>
       </section>
       <section>
         <!-- Особливості -->
-        <h2>Особливості</h2>
-        <ul>
+        <h2 class="visually-hidden">Особливості</h2>
+        <ul class="list-of-features">
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+            <p class="paragraph">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
             <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+            <p class="paragraph">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
             <h3>ПЛАНУВАННЯ</h3>
-            <p>
+            <p class="paragraph">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
             <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+            <p class="paragraph">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -63,8 +82,8 @@
         </ul>
       </section>
       <section>
-        <!-- Чим ми займаємось -->
-        <h2>Чим ми займаємося</h2>
+        <!-- Чим ми займаємося -->
+        <h2 class="what-we-do">Чим ми займаємося</h2>
         <ul>
           <li>
             <img
@@ -92,57 +111,60 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="our-team">
         <!-- Наша команда -->
         <h2>Наша команда</h2>
         <ul>
-          <li>
+          <li class="team-card">
             <img
               src="./images/img.jpg"
               alt="Ігор Дем'яненко"
               width="270"
               height="260"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="words-in-center">Ігор Дем'яненко</h3>
+            <p class="words-in-center paragraph">Product Designer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/img1.jpg"
               alt="Ольга Рєпіна"
               width="270"
               height="260"
             />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="words-in-center">Ольга Рєпіна</h3>
+            <p class="words-in-center paragraph">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/img2.jpg"
               alt="Микола Тарасов"
               width="270"
               height="260"
             />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="words-in-center">Микола Тарасов</h3>
+            <p class="words-in-center paragraph">Marketing</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/img3.jpg"
               alt="Михайло Єрмаков"
               width="270"
               height="260"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <h3 class="words-in-center">Михайло Єрмаков</h3>
+            <p class="words-in-center paragraph">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Підвал -->
-    <footer>
-      <a href="./index.html" lang="en">WebStudio</a>
-      <address>
+    <footer class="page-footer">
+      <a class="logo" href="./index.html" lang="en"
+        ><span class="text-blue">Web</span
+        ><span class="text-white">Studio</span></a
+      >
+      <address class="address link">
         <ul>
           <li>
             <a
