--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         >
         <!-- Навігація -->
         <ul>
-          <li><a class="site-nav" href="./index.html">Cтудія</a></li>
+          <li><a class="site-nav current" href="./index.html">Cтудія</a></li>
           <li>
             <a class="site-nav" href="./portfolio.html">Портфоліо</a>
           </li>
@@ -51,29 +51,29 @@
       <section>
         <!-- Особливості -->
         <h2 class="visually-hidden">Особливості</h2>
-        <ul class="list-of-features">
+        <ul>
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="h-three-in-pageone">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="paragraph">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="h-three-in-pageone">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="paragraph">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
+            <h3 class="h-three-in-pageone">ПЛАНУВАННЯ</h3>
             <p class="paragraph">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="h-three-in-pageone">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="paragraph">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -111,9 +111,9 @@
           </li>
         </ul>
       </section>
-      <section class="our-team">
+      <section>
         <!-- Наша команда -->
-        <h2>Наша команда</h2>
+        <h2 class="our-team">Наша команда</h2>
         <ul>
           <li class="team-card">
             <img
@@ -122,7 +122,7 @@
               width="270"
               height="260"
             />
-            <h3 class="words-in-center">Ігор Дем'яненко</h3>
+            <h3 class="words-in-center team-member">Ігор Дем'яненко</h3>
             <p class="words-in-center paragraph">Product Designer</p>
           </li>
           <li class="team-card">
@@ -132,7 +132,7 @@
               width="270"
               height="260"
             />
-            <h3 class="words-in-center">Ольга Рєпіна</h3>
+            <h3 class="words-in-center team-member">Ольга Рєпіна</h3>
             <p class="words-in-center paragraph">Frontend Developer</p>
           </li>
           <li class="team-card">
@@ -142,7 +142,7 @@
               width="270"
               height="260"
             />
-            <h3 class="words-in-center">Микола Тарасов</h3>
+            <h3 class="words-in-center team-member">Микола Тарасов</h3>
             <p class="words-in-center paragraph">Marketing</p>
           </li>
           <li class="team-card">
@@ -152,7 +152,7 @@
               width="270"
               height="260"
             />
-            <h3 class="words-in-center">Михайло Єрмаков</h3>
+            <h3 class="words-in-center team-member">Михайло Єрмаков</h3>
             <p class="words-in-center paragraph">UI Designer</p>
           </li>
         </ul>
@@ -164,10 +164,11 @@
         ><span class="text-blue">Web</span
         ><span class="text-white">Studio</span></a
       >
-      <address class="address link">
+      <address class="link">
         <ul>
           <li>
             <a
+              class="address"
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               target="_blank"
               rel="noopener noreferrer nofollow"
@@ -175,10 +176,12 @@
             >
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="address" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="address" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
