--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
         <ul>
           <li><a class="site-nav" href="./index.html">Cтудія</a></li>
           <li>
-            <a class="site-nav" href="./portfolio.html">Портфоліо</a>
+            <a class="site-nav current" href="./portfolio.html"> Портфоліо</a>
           </li>
           <li><a class="site-nav" href="#">Контакти</a></li>
         </ul>
@@ -53,97 +53,115 @@
           <li><button class="filter" type="button">Дизайн</button></li>
           <li><button class="filter" type="button">Маркетинг</button></li>
         </ul>
-        <ul class="portfolio">
+        <ul>
           <li class="container-in-pagetwo">
-            <img
-              src="./images/img4.jpg"
-              alt="Браузер"
-              width="370"
-              height="294"
-            />
-            <h2>Технокряк</h2>
-            <p class="paragraph">Веб-сайт</p>
+            <a href="#"
+              ><img
+                src="./images/img4.jpg"
+                alt="Браузер"
+                width="370"
+                height="294"
+              />
+              <h2 class="h-two-in-pagetwo">Технокряк</h2>
+              <p class="paragraph-in-pagetwo">Веб-сайт</p></a
+            >
           </li>
           <li class="container-in-pagetwo">
-            <img
-              src="./images/img5.jpg"
-              alt="Люди грають в баскетбол"
-              width="370"
-              height="294"
-            />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p class="paragraph">Дизайн</p>
+            <a href="#"
+              ><img
+                src="./images/img5.jpg"
+                alt="Люди грають в баскетбол"
+                width="370"
+                height="294"
+              />
+              <h2 class="h-two-in-pagetwo">Постер New Orlean vs Golden Star</h2>
+              <p class="paragraph-in-pagetwo">Дизайн</p></a
+            >
           </li>
           <li class="container-in-pagetwo">
-            <img
-              src="./images/img6.jpg"
-              alt="Ресторан(Морська
+            <a href="#"
+              ><img
+                src="./images/img6.jpg"
+                alt="Ресторан(Морська
               їжа)"
-              width="370"
-              height="294"
-            />
-            <h2>Ресторан Seafood</h2>
-            <p class="paragraph">Додаток</p>
+                width="370"
+                height="294"
+              />
+              <h2 class="h-two-in-pagetwo">Ресторан Seafood</h2>
+              <p class="paragraph-in-pagetwo">Додаток</p></a
+            >
           </li>
           <li class="container-in-pagetwo">
-            <img
-              src="./images/img7.jpg"
-              alt="Навушники"
-              width="370"
-              height="294"
-            />
-            <h2>Проєкт Prime</h2>
-            <p class="paragraph">Маркетинг</p>
+            <a href="#"
+              ><img
+                src="./images/img7.jpg"
+                alt="Навушники"
+                width="370"
+                height="294"
+              />
+              <h2 class="h-two-in-pagetwo">Проєкт Prime</h2>
+              <p class="paragraph-in-pagetwo">Маркетинг</p></a
+            >
           </li>
           <li class="container-in-pagetwo">
-            <img
-              src="./images/img8.jpg"
-              alt="Коробки"
-              width="370"
-              height="294"
-            />
-            <h2>Проєкт Boxes</h2>
-            <p class="paragraph">Додаток</p>
+            <a href="#"
+              ><img
+                src="./images/img8.jpg"
+                alt="Коробки"
+                width="370"
+                height="294"
+              />
+              <h2 class="h-two-in-pagetwo">Проєкт Boxes</h2>
+              <p class="paragraph-in-pagetwo">Додаток</p></a
+            >
           </li>
           <li class="container-in-pagetwo">
-            <img
-              src="./images/img9.jpg"
-              alt="Монітор"
-              width="370"
-              height="294"
-            />
-            <h2>Inspiration has no Borders</h2>
-            <p class="paragraph">Веб-сайт</p>
+            <a href="#"
+              ><img
+                src="./images/img9.jpg"
+                alt="Монітор"
+                width="370"
+                height="294"
+              />
+              <h2 class="h-two-in-pagetwo">Inspiration has no Borders</h2>
+              <p class="paragraph-in-pagetwo">Веб-сайт</p></a
+            >
           </li>
           <li class="container-in-pagetwo">
-            <img
-              src="./images/img10.jpg"
-              alt="Журнал"
-              width="370"
-              height="294"
-            />
-            <h2>Видання Limited Edition</h2>
-            <p class="paragraph">Дизайн</p>
+            <a href="#"
+              ><img
+                src="./images/img10.jpg"
+                alt="Журнал"
+                width="370"
+                height="294"
+              />
+              <h2 class="h-two-in-pagetwo">Видання Limited Edition</h2>
+              <p class="paragraph-in-pagetwo">Дизайн</p></a
+            >
           </li>
           <li class="container-in-pagetwo">
-            <img
-              src="./images/img11.jpg"
-              alt="Бірка"
-              width="370"
-              height="294"
-            />
-            <h2>Проєкт LAB</h2>
-            <p class="paragraph">Маркетинг</p>
+            <a href="#"
+              ><img
+                src="./images/img11.jpg"
+                alt="Бірка"
+                width="370"
+                height="294"
+              />
+              <h2 class="h-two-in-pagetwo">Проєкт LAB</h2>
+              <p class="paragraph-in-pagetwo">Маркетинг</p></a
+            >
           </li>
           <li class="container-in-pagetwo">
-            <img
-              src="./images/img12.jpg"
-              alt="Людина працює за ноутбуком"
-              width="370"
-              height="294"
-            />
-            <h2>Growing Business</h2>
-            <p class="paragraph">Додаток</p>
+            <a href="#"
+              ><img
+                src="./images/img12.jpg"
+                alt="Людина працює за ноутбуком"
+                width="370"
+                height="294"
+              />
+              <h2 class="h-two-in-pagetwo">Growing Business</h2>
+              <p class="paragraph-in-pagetwo">Додаток</p></a
+            >
           </li>
         </ul>
       </section>
@@ -154,10 +172,11 @@
         ><span class="text-blue">Web</span
         ><span class="text-white">Studio</span></a
       >
-      <address class="address link">
+      <address class="link">
         <ul>
           <li>
             <a
+              class="address"
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               target="_blank"
               rel="noopener noreferrer nofollow"
@@ -165,10 +184,12 @@
             >
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="address" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="address" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
