--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               height="260"
             />
             <h3 class="words-in-center team-member">Ігор Дем'яненко</h3>
-            <p class="words-in-center paragraph">Product Designer</p>
+            <p class="words-in-center paragraph specialty">Product Designer</p>
           </li>
           <li class="team-card">
             <img
@@ -133,7 +133,7 @@
               height="260"
             />
             <h3 class="words-in-center team-member">Ольга Рєпіна</h3>
-            <p class="words-in-center paragraph">Frontend Developer</p>
+            <p class="words-in-center paragraph specialty">Frontend Developer</p>
           </li>
           <li class="team-card">
             <img
@@ -143,7 +143,7 @@
               height="260"
             />
             <h3 class="words-in-center team-member">Микола Тарасов</h3>
-            <p class="words-in-center paragraph">Marketing</p>
+            <p class="words-in-center paragraph specialty">Marketing</p>
           </li>
           <li class="team-card">
             <img
@@ -153,7 +153,7 @@
               height="260"
             />
             <h3 class="words-in-center team-member">Михайло Єрмаков</h3>
-            <p class="words-in-center paragraph">UI Designer</p>
+            <p class="words-in-center paragraph specialty">UI Designer</p>
           </li>
         </ul>
       </section>
